Fixing flex gap for item sheets (#313)
Closes #299
Having a tab div inside the sheet-body section caused a CSS selector to set gap to 10 for fields in some item sheets. Normally it's only supposed to apply to actor sheets, so I create a more specific one for tabbed item sheets.

Testing: Items with tabs (such as spells) should have no gap between fields.

--- a/css/essence20.css
+++ b/css/essence20.css
@@ -907,6 +907,10 @@
   gap: 10px;
 }
 
+.essence20 .sheet-body.item-sheet .tab {
+  gap: 0px;
+}
+
 .essence20 .tabs .item {
   background: #5f5f5f;
   border: 1px solid;
